--- a/Round4/Manuscript/Permuting_Accuracy.bib
+++ b/Round4/Manuscript/Permuting_Accuracy.bib
@@ -1923,3 +1923,11 @@ Contact: tongt@hkbu.edu.hk},
 	year={2012},
 	publisher={John Wiley \& Sons}
 }
+
+@inproceedings{ng2002discriminative,
+	title={On discriminative vs. generative classifiers: A comparison of logistic regression and naive bayes},
+	author={Ng, Andrew Y and Jordan, Michael I},
+	booktitle={Advances in neural information processing systems},
+	pages={841--848},
+	year={2002}
+}
